--- a/backend/public/front/style/index.css
+++ b/backend/public/front/style/index.css
@@ -36,3 +36,8 @@ form button {
 #messages li:nth-child(odd) {
   background: #eee;
 }
+#bloque-participantes{
+  position: absolute;
+  right: 0px;
+  background-color: lightgreen;
+}
